<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D4E3D5"
    tools:context=".Registre">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="340dp"
        android:layout_height="590dp"

        android:background="#C8E6C9"
        android:hapticFeedbackEnabled="true"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:text="Registre Usuari"
                android:textSize="20dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="270dp"

                tools:srcCompat="@tools:sample/avatars">

            </ImageView>

            <LinearLayout
                android:id="@+id/lay1"
                android:layout_width="100dp"
                android:layout_height="390dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_vertical"
                    android:text="Email: "
                    android:textSize="14dp" />


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_vertical"
                    android:text="Password: "
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_vertical"
                    android:text="Nom: "
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_vertical"
                    android:text="Cognom: "
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/txtTlf"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:fontFamily="@font/poppinsbold"
                    android:gravity="center_vertical"
                    android:text="Telèfon: "
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="390dp"
                android:layout_marginTop="60dp"
                android:layout_toRightOf="@id/lay1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userR"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:inputType="textEmailAddress"
                    android:textSize="14dp">


                </EditText>

                <EditText
                    android:id="@+id/pwdR"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:inputType="textPassword"
                    android:textSize="14dp">

                </EditText>

                <EditText
                    android:id="@+id/txtnames"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:textSize="14dp">

                </EditText>

                <EditText
                    android:id="@+id/userCognom"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:textSize="14dp">

                </EditText>

                <EditText
                    android:id="@+id/userTelef"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:inputType="phone"
                    android:numeric="integer"
                    android:textSize="14dp">

                </EditText>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="460dp"
                android:layout_height="60dp"
                android:layout_marginLeft="210dp"
                android:layout_marginTop="370dp"
                android:background="@drawable/button_back">

                <TextView
                    android:id="@+id/txtRegis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/poppinsbold"
                    android:text="Registre"
                    android:textSize="15dp">

                </TextView>

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/barLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lay1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="152dp"
                android:layout_marginLeft="145dp"
                android:layout_marginTop="42dp"
                android:layout_marginEnd="140dp"
                android:layout_marginBottom="50dp"
                android:progressTint="#FFFFFF"
                android:visibility="invisible">

            </ProgressBar>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/statusRegistre"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>