...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832"
        app:srcCompat="@drawable/campingtent" />

    <Button
        android:id="@+id/btnRegistre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#64B5F6"
        android:text="Registre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
